The las commit from here I think

--- a/hB_Japanesecars.html
+++ b/hB_Japanesecars.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link href="Subaru.png" rel="shortcut icon" sizes="180x180">
     <title>Japanese cars</title>
 </head>
+
 <body>
     <div class="d-block d-sm-none">XS</div>
     <div class="d-none d-sm-block d-md-none">SM</div>
@@ -29,38 +31,90 @@
     <div class="row">
         <div class="col-xs-12 col-md-6">
             <h2 id="#Mitsubishi">Mitsubishi</h2>
-                <p><a href="Mitsubishi_nagy.png"><img src="Mitsubishi.png" alt="Mitsubishi Lancer" title="Mitsubishi Lancer" class="Képek"></a>A Mitsubishi mint márka egy független japán multinacionális vállalatokat tömörítő cégcsoport, japánul "keirecu". Jelenleg legdrágábban értékeített Mitsubishi egy Mitsubishi Lancer volt 117 ezer dollárért.</p>
-                <p>Az Ivaszaki Jataró által 1870-ben alapított társaság cégei előbb hajózási, bányászati, majd banki és nehézipari tevékenységet folytattak, például a Mitsubishi Heavy Industries, Ltd (Mitsubishi Jūkōgyō Kabushiki Kaisha, Micubisi Dzsúkógjó Kabusiki Kaisa) állította elő a második világháború első felének leghatékonyabb vadászgépét, a Zerót, és itt készült a Muszasi nevű szupercsatahajó is. A háború után a zaibacut feloszlatták, vagyis a központi holdingtársaságot felszámolták. 1917-ben a Mitsubishi-birodalom hajói után megszületett az első sorozatban gyártott japán személyautó, a Mitsubishi A-modell. A ma több mint negyven óriásvállalatból álló Mitsubishi-cégcsoport a világ egyik legnagyobb és legkiterjedtebb ipari konszernje. Kevesen tudják például azt, hogy a világ egyik legnagyobb bankját a Mitsubishi tudhatja magáénak.</p>
+            <p><a href="Mitsubishi_nagy.png"><img src="Mitsubishi.png" alt="Mitsubishi Lancer" title="Mitsubishi Lancer"
+                        class="Képek"></a>A Mitsubishi mint márka egy független japán multinacionális vállalatokat
+                tömörítő cégcsoport, japánul "keirecu". Jelenleg legdrágábban értékeített Mitsubishi egy Mitsubishi
+                Lancer volt 117 ezer dollárért.</p>
+            <p>Az Ivaszaki Jataró által 1870-ben alapított társaság cégei előbb hajózási, bányászati, majd banki és
+                nehézipari tevékenységet folytattak, például a Mitsubishi Heavy Industries, Ltd (Mitsubishi Jūkōgyō
+                Kabushiki Kaisha, Micubisi Dzsúkógjó Kabusiki Kaisa) állította elő a második világháború első felének
+                leghatékonyabb vadászgépét, a Zerót, és itt készült a Muszasi nevű szupercsatahajó is. A háború után a
+                zaibacut feloszlatták, vagyis a központi holdingtársaságot felszámolták. 1917-ben a Mitsubishi-birodalom
+                hajói után megszületett az első sorozatban gyártott japán személyautó, a Mitsubishi A-modell. A ma több
+                mint negyven óriásvállalatból álló Mitsubishi-cégcsoport a világ egyik legnagyobb és legkiterjedtebb
+                ipari konszernje. Kevesen tudják például azt, hogy a világ egyik legnagyobb bankját a Mitsubishi
+                tudhatja magáénak.</p>
         </div>
         <div class="col-xs-12 col-md-6">
             <h2 id="#Subaru">Subaru</h2>
-                <p><a href="Subaru-nagy.png"><img src="Subaru.png" alt="Subaru Impreza 22B STi" title="Subaru Impreza 22B STi" class="Képek"></a>A boxermotor nagy híveként ismert Subaru japán autómárkát 1953-ban alapították. Az egyik legkiválóbb és legritkább gép, a Subaru Impreza 22B STi például az egyik legdrágább modellé lépett elő a 32 ezer dollárjával.</p>
-                <p>Hivatalosan 1953-ban hozták létre a Subaru japán autógyártó-vállalatot, ám gyökerei egészen 1915-ig nyúlnak vissza az időben. A sokáig repülőgépkutató-laboratóriumként működő Fuji Heavy Industries (FHI) átszervezésére 1932-ben került sor, immár Nakajima Aircraft Company Ltd. néven, mely a második világháború alatt Japán repülőinek egyik fő gyártójává vált. A háború után Fuji Sangyo Co., Ltd.-ként szervezték újra a vállalatot, ami repülőgép-alkatrészekből építette meg Fuji Rabbit nevű motoros robogóját 1946-ban. A japán kormány rendelete értelmében négy évvel később 12 részre osztották fel. 1953 és 1955 összesen hat vállalat egyesült, és újra létrejött a Fuji Heavy Industries. A vezetés azonban új vállalatot akart létrehozni autógyártásra, és mialatt elkezdték fejleszteni a P-1 kódnevű autót, megszületett a Subaru.</p>
+            <p><a href="Subaru-nagy.png"><img src="Subaru.png" alt="Subaru Impreza 22B STi"
+                        title="Subaru Impreza 22B STi" class="Képek"></a>A boxermotor nagy híveként ismert Subaru japán
+                autómárkát 1953-ban alapították. Az egyik legkiválóbb és legritkább gép, a Subaru Impreza 22B STi
+                például az egyik legdrágább modellé lépett elő a 32 ezer dollárjával.</p>
+            <p>Hivatalosan 1953-ban hozták létre a Subaru japán autógyártó-vállalatot, ám gyökerei egészen 1915-ig
+                nyúlnak vissza az időben. A sokáig repülőgépkutató-laboratóriumként működő Fuji Heavy Industries (FHI)
+                átszervezésére 1932-ben került sor, immár Nakajima Aircraft Company Ltd. néven, mely a második
+                világháború alatt Japán repülőinek egyik fő gyártójává vált. A háború után Fuji Sangyo Co., Ltd.-ként
+                szervezték újra a vállalatot, ami repülőgép-alkatrészekből építette meg Fuji Rabbit nevű motoros
+                robogóját 1946-ban. A japán kormány rendelete értelmében négy évvel később 12 részre osztották fel. 1953
+                és 1955 összesen hat vállalat egyesült, és újra létrejött a Fuji Heavy Industries. A vezetés azonban új
+                vállalatot akart létrehozni autógyártásra, és mialatt elkezdték fejleszteni a P-1 kódnevű autót,
+                megszületett a Subaru.</p>
         </div>
         <div class="col-xs-12 col-md-6">
             <h2 id="#Honda">Honda</h2>
-                <p><a href="Honda_nagy.png"><img src="Honda.png" alt="Honda NSX" title="Honda NSX" class="Képek"></a>Az 1948 szeptemberében alapított Honda Motor Co. Ltd. létezése első percétől fogva kivételes színvonalú mérnöki teljesítményéről ismert. A nemsokára boltokba kerülő NSX lesz az eddigi legdrágább, Amerikában sorozatgyártott négykerekű a maga 156 ezer dolláros alapárával</p>
-                <p>A Honda már 15 éve működött, amikor elkezdett gépkocsikat gyártani, és újabb tíz évbe telt, mire a nemzetközi autóipar fontos szereplőjévé vált. A 80-as évek elején a Honda már vezető multinacionális vállalat volt. A Honda 1963-ban 136 járművet gyártott. Egy évvel később 5210, 1965-ben pedig már 8779 darabot, amelyek egynegyedét exportálták. A termelés ezután visszaesett 3209 járműre, egy újabb év elteltével, 1967-ben azonban ismét fellendült, nem kevesebb, mint 87 000 darabra. A siker kulcsa az erős hazai piac volt: 1968-ban 186 500, 1969-ben 232 000 járművet gyártottak, és a termelésnek csupán 5%-át exportáltak.</p>
+            <p><a href="Honda_nagy.png"><img src="Honda.png" alt="Honda NSX" title="Honda NSX" class="Képek"></a>Az 1948
+                szeptemberében alapított Honda Motor Co. Ltd. létezése első percétől fogva kivételes színvonalú mérnöki
+                teljesítményéről ismert. A nemsokára boltokba kerülő NSX lesz az eddigi legdrágább, Amerikában
+                sorozatgyártott négykerekű a maga 156 ezer dolláros alapárával</p>
+            <p>A Honda már 15 éve működött, amikor elkezdett gépkocsikat gyártani, és újabb tíz évbe telt, mire a
+                nemzetközi autóipar fontos szereplőjévé vált. A 80-as évek elején a Honda már vezető multinacionális
+                vállalat volt. A Honda 1963-ban 136 járművet gyártott. Egy évvel később 5210, 1965-ben pedig már 8779
+                darabot, amelyek egynegyedét exportálták. A termelés ezután visszaesett 3209 járműre, egy újabb év
+                elteltével, 1967-ben azonban ismét fellendült, nem kevesebb, mint 87 000 darabra. A siker kulcsa az erős
+                hazai piac volt: 1968-ban 186 500, 1969-ben 232 000 járművet gyártottak, és a termelésnek csupán 5%-át
+                exportáltak.</p>
         </div>
         <div class="col-xs-12 col-md-6">
             <h2 id="#Toyota">Toyota</h2>
-                <p><a href="Toyota_nagy.png"><img src="Toyota.png" alt="Toyota GR Supra Racing" title="Toyota GR Supra Racing" class="Képek"></a>A Toyota legdrágább autója egy versenyautó, a Toyota GR Supra Racing mely akár 2millió dollárba is kerülhet.</p>
-                <p>Mire a Toyota a harmincas évek közepén elkezdett autókat gyártani már sok japán autógyár működött. A japán belpiac alaposan megerősödött, Amerika nagy érdeklődést mutatott a Toyotákra. Már Európában is egyre inkább elismerték a márkát: a fő betörési pontok közé tartozott Hollandia, Svájc és Dánia.1961-ben piacra került az egész Ázsiát meghódító, apró Publica (a Starlet távoli elődje), aztán 1965-ben 0,8 literes motorral hajtott, parányi sportkocsi, a Sports 800, majd 1966-ban a cég mindmáig legnagyobb sikere, a Corolla. </p>
+            <p><a href="Toyota_nagy.png"><img src="Toyota.png" alt="Toyota GR Supra Racing"
+                        title="Toyota GR Supra Racing" class="Képek"></a>A Toyota legdrágább autója egy versenyautó, a
+                Toyota GR Supra Racing mely akár 2millió dollárba is kerülhet.</p>
+            <p>Mire a Toyota a harmincas évek közepén elkezdett autókat gyártani már sok japán autógyár működött. A
+                japán belpiac alaposan megerősödött, Amerika nagy érdeklődést mutatott a Toyotákra. Már Európában is
+                egyre inkább elismerték a márkát: a fő betörési pontok közé tartozott Hollandia, Svájc és Dánia.1961-ben
+                piacra került az egész Ázsiát meghódító, apró Publica (a Starlet távoli elődje), aztán 1965-ben 0,8
+                literes motorral hajtott, parányi sportkocsi, a Sports 800, majd 1966-ban a cég mindmáig legnagyobb
+                sikere, a Corolla. </p>
         </div>
         <div class="Forrasok">
             <h4>Források</h4>
             <ul>
-                <li><a href="https://hu.wikipedia.org/wiki/Mitsubishi">https://hu.wikipedia.org/wiki/Mitsubishi</a> 2024.05.25</li>
-                <li><a href="https://autopult.hu/hirek/42-milliot-fizettek-egy-22-eves-mitsubishiert.html">https://autopult.hu/hirek/42-milliot-fizettek-egy-22-eves-mitsubishiert.html</a> 2024.06.02</li>
+                <li><a href="https://hu.wikipedia.org/wiki/Mitsubishi">https://hu.wikipedia.org/wiki/Mitsubishi</a>
+                    2024.05.25</li>
+                <li><a
+                        href="https://autopult.hu/hirek/42-milliot-fizettek-egy-22-eves-mitsubishiert.html">https://autopult.hu/hirek/42-milliot-fizettek-egy-22-eves-mitsubishiert.html</a>
+                    2024.06.02</li>
                 <li><a href="https://www.vezess.hu/subaru/">https://www.vezess.hu/subaru/</a> 2024.06.02</li>
-                <li><a href="https://www.caranddriver.com/news/a43375653/1998-subaru-impreza-22b-sti-bring-a-trailer-auction/">https://www.caranddriver.com/news/a43375653/1998-subaru-impreza-22b-sti-bring-a-trailer-auction/</a> 2024.06.02</li>
-                <li><a href="https://hu.wikipedia.org/wiki/Honda">https://hu.wikipedia.org/wiki/Honda</a> 2024.06.02</li>
-                <li><a href="https://www.autoblog.hu/hirek/a-honda-nsx-lesz-minden-idok-legdragabb-amerikai-autoja/">https://www.autoblog.hu/hirek/a-honda-nsx-lesz-minden-idok-legdragabb-amerikai-autoja/</a> 2024.06.02</li>
-                <li><a href="https://hu.wikipedia.org/wiki/Toyota">https://hu.wikipedia.org/wiki/Toyota</a> 2024.06.02</li>
-                <li><a href="https://hu.motor1.com/news/260619/2-millio-dollarba-is-kerulhet-a-legdragabb-toyota-supra/">https://hu.motor1.com/news/260619/2-millio-dollarba-is-kerulhet-a-legdragabb-toyota-supra/</a> 2024.06.02</li>
-                <li><a href="https://toyotagazooracing.com/gr/supra/genevams18/">https://toyotagazooracing.com/gr/supra/genevams18/</a> 2024.06.02</li>
+                <li><a
+                        href="https://www.caranddriver.com/news/a43375653/1998-subaru-impreza-22b-sti-bring-a-trailer-auction/">https://www.caranddriver.com/news/a43375653/1998-subaru-impreza-22b-sti-bring-a-trailer-auction/</a>
+                    2024.06.02</li>
+                <li><a href="https://hu.wikipedia.org/wiki/Honda">https://hu.wikipedia.org/wiki/Honda</a> 2024.06.02
+                </li>
+                <li><a
+                        href="https://www.autoblog.hu/hirek/a-honda-nsx-lesz-minden-idok-legdragabb-amerikai-autoja/">https://www.autoblog.hu/hirek/a-honda-nsx-lesz-minden-idok-legdragabb-amerikai-autoja/</a>
+                    2024.06.02</li>
+                <li><a href="https://hu.wikipedia.org/wiki/Toyota">https://hu.wikipedia.org/wiki/Toyota</a> 2024.06.02
+                </li>
+                <li><a
+                        href="https://hu.motor1.com/news/260619/2-millio-dollarba-is-kerulhet-a-legdragabb-toyota-supra/">https://hu.motor1.com/news/260619/2-millio-dollarba-is-kerulhet-a-legdragabb-toyota-supra/</a>
+                    2024.06.02</li>
+                <li><a
+                        href="https://toyotagazooracing.com/gr/supra/genevams18/">https://toyotagazooracing.com/gr/supra/genevams18/</a>
+                    2024.06.02</li>
             </ul>
         </div>
     </div>
 </body>
+
 </html>
