--- a/hB_Italiancars.html
+++ b/hB_Italiancars.html
@@ -26,13 +26,17 @@
             </div>
         </div>
         <ul>
+            <li><a href="hK_Autók.html">Főoldal</a></li>
+            <li><a href="hB_Japanesecars.html">Japán autók</a></li>
+        </ul>
+        <ul>
             <li><a href="#Ferrari">Ferrari</a></li>
             <li><a href="#Alfa Romeo">Alfa Romeo</a></li>
             <li><a href="#Lamborghini">Lamborghini</a></li>
         </ul>
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <h2 id="#Ferrari">Ferrari</h2>
+                <h2 id="Ferrari">Ferrari</h2>
                 <p><a href="Ferrari_nagy.png"><img src="Ferrari.png" alt="Ferrari 250 Testa Rossát"
                             title="Ferrari 250 Testa Rossát" class="Képek"></a>A Ferrari mára már a világ egyik
                     lehíresebb és legnagyobb bevételel rendelkező autómárkája. Egy ideig egy Ferrari tartotta a
@@ -52,7 +56,7 @@
                     felügyelte.</p>
             </div>
             <div class="col-xs-12 col-md-6">
-                <h2 id="#Alfa Romeo">Alfa Romeo</h2>
+                <h2 id="Alfa Romeo">Alfa Romeo</h2>
                 <p><a href="Alfa Romeo_Nagy.png"><img src="Alfa Romeo.png" alt="Alfa Romeo 33 Stradale"
                             title="Alfa Romeo 33 Stradale" class="Képek"></a>A világ 7 legnagyobb autómárkája, amely
                     2024 decemberébe fogja átadni az első 33 Stradale-t a legújabb és legdrágább modelljét melynek az
@@ -69,7 +73,7 @@
                     első Alfa Romeo márkanév alatt gyártott autó 1920-ban készült el. Ez volt a Torpedo 20-30 HP.</p>
             </div>
             <div class="col-xs-12 col-md-6">
-                <h2 id="#Lamborghini">Lamborghini</h2>
+                <h2 id="Lamborghini">Lamborghini</h2>
                 <p><a href="Lamborghini_nagy.png"><img src="Lamborghini.png" alt="Lamborghini Veneno"
                             title="Lamborghini Veneno" class="Képek"></a>Jelenleg egyik legdrágább és a gazdagok körében
                     legsikersebb autóit gyártó cég a világon. A cég 50. évfordulórája készült a jelenleg is legdrágább
@@ -94,8 +98,6 @@
                     <li><a
                             href="https://roadster.hu/alfa-romeo-33-stradale/">https://roadster.hu/alfa-romeo-33-stradale/</a>
                         2024.06.02</li>
-                    <li></li>
-                    <li></li>
                 </ul>
             </div>
         </div>
