--- a/hB_Japanesecars.html
+++ b/hB_Japanesecars.html
@@ -23,6 +23,10 @@
         </div>
     </div>
     <ul>
+        <li><a href="hK_Autók.html">Főoldal</a></li>
+        <li><a href="hB_Italiancars.html">Olasz autók</a></li>
+    </ul>
+    <ul>
         <li><a href="#Mitsubishi">Mitsubishi</a></li>
         <li><a href="#Subaru">Subaru</a></li>
         <li><a href="#Honda">Honda</a></li>
@@ -30,7 +34,7 @@
     </ul>
     <div class="row">
         <div class="col-xs-12 col-md-6">
-            <h2 id="#Mitsubishi">Mitsubishi</h2>
+            <h2 id="Mitsubishi">Mitsubishi</h2>
             <p><a href="Mitsubishi_nagy.png"><img src="Mitsubishi.png" alt="Mitsubishi Lancer" title="Mitsubishi Lancer"
                         class="Képek"></a>A Mitsubishi mint márka egy független japán multinacionális vállalatokat
                 tömörítő cégcsoport, japánul "keirecu". Jelenleg legdrágábban értékeített Mitsubishi egy Mitsubishi
@@ -46,7 +50,7 @@
                 tudhatja magáénak.</p>
         </div>
         <div class="col-xs-12 col-md-6">
-            <h2 id="#Subaru">Subaru</h2>
+            <h2 id="Subaru">Subaru</h2>
             <p><a href="Subaru-nagy.png"><img src="Subaru.png" alt="Subaru Impreza 22B STi"
                         title="Subaru Impreza 22B STi" class="Képek"></a>A boxermotor nagy híveként ismert Subaru japán
                 autómárkát 1953-ban alapították. Az egyik legkiválóbb és legritkább gép, a Subaru Impreza 22B STi
@@ -62,7 +66,7 @@
                 megszületett a Subaru.</p>
         </div>
         <div class="col-xs-12 col-md-6">
-            <h2 id="#Honda">Honda</h2>
+            <h2 id="Honda">Honda</h2>
             <p><a href="Honda_nagy.png"><img src="Honda.png" alt="Honda NSX" title="Honda NSX" class="Képek"></a>Az 1948
                 szeptemberében alapított Honda Motor Co. Ltd. létezése első percétől fogva kivételes színvonalú mérnöki
                 teljesítményéről ismert. A nemsokára boltokba kerülő NSX lesz az eddigi legdrágább, Amerikában
@@ -76,7 +80,7 @@
                 exportáltak.</p>
         </div>
         <div class="col-xs-12 col-md-6">
-            <h2 id="#Toyota">Toyota</h2>
+            <h2 id="Toyota">Toyota</h2>
             <p><a href="Toyota_nagy.png"><img src="Toyota.png" alt="Toyota GR Supra Racing"
                         title="Toyota GR Supra Racing" class="Képek"></a>A Toyota legdrágább autója egy versenyautó, a
                 Toyota GR Supra Racing mely akár 2millió dollárba is kerülhet.</p>
